--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: Linear3
 Type: Package
-Title: What the Package Does (Title Case)
+Title: construct linear regression model
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Xiwen Feng
+Maintainer: Xiwen Feng <xiwenf@umich.edu> 
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.2
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
