--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,16 +9,9 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.2
-Depends:
-    stats,
-    tidyr,
-    ggplot2
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0),
-    car,
-    ggbeeswarm,
-    covr
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
