--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,9 @@ RoxygenNote: 7.2.2
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    car,
+    bench,
+    ggbeeswarm
 VignetteBuilder: knitr
 Config/testthat/edition: 3
