--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(ANOVA)
 export(h_matrix)
 export(lr)
 export(outlierinfluence)
-export(plotdffits)
+export(plotoutliers)
 importFrom(stats,model.matrix)
 importFrom(stats,na.omit)
 importFrom(stats,pf)
