--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Suggests:
     bench,
     ggbeeswarm,
     stats,
-    ggplot2
+    ggplot2,
+    covr
 VignetteBuilder: knitr
 Config/testthat/edition: 3
