--- a/codecov.yml
+++ b/codecov.yml
@@ -24,3 +24,8 @@ steps:
     name: codecov-umbrella # optional
     fail_ci_if_error: true # optional (default = false)
     verbose: true # optional (default = false)
+# The user that you will use to serve as the bot connection to Codecov
+# This bot user must have permissions on the repo and Codecov (by logging in)
+
+codecov:
+  bot: <bot-username> #this is a username for Github/Gitlab/Bitbucket
