--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export(ANOVA)
 export(h_matrix)
 export(lr)
 export(outlierinfluence)
+importFrom(Rcpp,sourceCpp)
 importFrom(stats,model.matrix)
 importFrom(stats,na.omit)
 importFrom(stats,pf)
 importFrom(stats,pt)
 importFrom(stats,quantile)
+useDynLib(Linear3, .registration = TRUE)
