--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: Linear3
 Type: Package
-Title: construct linear regression model
+Title: Linear regression, ANOVA, hat matrix and Outlier Influence in Linear Regression
 Version: 0.1.0
 Author: Xiwen Feng
 Maintainer: Xiwen Feng <xiwenf@umich.edu> 
-Description: Mimic existing R functions for linear regression and ANOVA. Compute leverage values and three commonly used resisuals (standardized, internally studentized, and externally studentized residuals), as well as diagnostic statistics for identifying outliers (DFFITS, Cook's Distance, and COVRATIO) with their respective plotting functions.  
-License: GPL-2
+Description: Mimic existing R functions for linear regression and ANOVA. Compute leverage values and three commonly used resisuals (standardized, internally studentized, and externally studentized residuals), as well as diagnostic statistics for identifying outliers (DFFITS, Cook's Distance).
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.2
